# shrine

./: Dockerfile  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt
shrine/: __init__.py  asgi.py  settings.py  wsgi.py
shrine/middlewares/: __init__.py
shrine/routes/: __init__.py  hello_world.py
