[tool.poetry]
name = "shrine"
version = "0.1.0"
description = ""
authors = ["yensa <romainlibert291091@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pdbpp = "^0.10.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
