[tool.poetry]
name = "shrine"
version = "0.1.0"
description = ""
authors = ["yensa <romainlibert291091@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.14.2"
uvicorn = "0.11.8"
starlette-authlib = "^0.1.7"
jinja2 = "^2.11.3"
pydantic = "^1.8.1"
python-dotenv = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pdbpp = "^0.10.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
